k8s/base/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: products
          image: jagoan-pos/products:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 4002
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: tcp
            initialDelaySeconds: 10
          livenessProbe:
            tcpSocket:
              port: tcp
            initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
    - name: tcp
      port: 4002
      targetPort: tcp
  type: ClusterIP
